Variables and bools and types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
         "cranelift",
-        "libcall"
+        "iadd",
+        "iconst",
+        "imul",
+        "isub",
+        "libcall",
+        "sdiv"
     ]
 }
