--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2024"
 cranelift = "0.104"
 cranelift-module = "0.104"
 cranelift-jit = "0.104"
+cranelift-object = "0.104"
+cranelift-codegen = "0.104"
+target-lexicon = "0.12.16"
+
+
 
 [features]
 debug = []
