--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "toy_comp"
 version = "0.1.0"
 edition = "2024"
+build = "build.rs"
 
 [dependencies]
 cranelift = "0.104"
@@ -15,3 +16,6 @@ target-lexicon = "0.12.16"
 
 [features]
 debug = []
+
+[build-dependencies]
+cc = "1.2.41"
