--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,15 @@
         "clif",
         "codegen",
         "cranelift",
+        "fptm",
+        "frtm",
+        "funcs",
         "iadd",
         "iconst",
         "imul",
         "isub",
         "libcall",
+        "objdumping",
         "opps",
         "sdiv",
         "uextend"
