--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,8 +11,11 @@
         "imul",
         "isub",
         "libcall",
+        "msys",
+        "msystem",
         "objdumping",
         "opps",
+        "println",
         "sdiv",
         "strequal",
         "uextend"
