--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ cranelift-jit = "0.104"
 cranelift-object = "0.104"
 cranelift-codegen = "0.104"
 target-lexicon = "0.12.16"
+ordered-float = "5.1.0"
 
 [build-dependencies]
 cc = "1.2.41"
