--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,16 +3,19 @@
         "arrs",
         "bitcast",
         "brif",
+        "bxor",
         "clif",
         "codegen",
         "conv",
         "cranelift",
         "elems",
+        "fadd",
         "fcmp",
         "fdiv",
         "fmul",
         "fptm",
         "frtm",
+        "fsub",
         "funcs",
         "iadd",
         "iconst",
@@ -28,6 +31,7 @@
         "RBRACK",
         "repr",
         "sdiv",
+        "srem",
         "strequal",
         "uextend"
     ]
