--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: [ "master" , "main"]
+    branches: [ "master", "main" ]
   pull_request:
     branches: [ "master", "main" ]
 
@@ -11,21 +11,30 @@ env:
 
 jobs:
   build:
-
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+    
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
     
-    - name: Install MinGW
+    - name: Install MinGW (Windows only)
+      if: runner.os == 'Windows'
       uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
         update: true
         install: mingw-w64-x86_64-gcc
     
-    - name: Add MinGW to PATH
+    - name: Add MinGW to PATH (Windows only)
+      if: runner.os == 'Windows'
       run: echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+    
+    - name: Install GCC (Linux only)
+      if: runner.os == 'Linux'
+      run: sudo apt-get update && sudo apt-get install -y gcc
     
     - name: Verify GCC installation
       run: gcc --version
