--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,6 +36,10 @@ jobs:
       if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install -y gcc
     
+    - name: Set Cargo target for Linux
+      if: runner.os == 'Linux'
+      run: echo "CARGO_BUILD_TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
+    
     - name: Verify GCC installation
       run: gcc --version
     
