--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "codegen",
         "conv",
         "cranelift",
+        "dimenstion",
         "elems",
         "fadd",
         "fcmp",
