--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "codegen",
         "conv",
         "cranelift",
+        "crtbegin",
         "dimenstion",
         "dylib",
         "elems",
