--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "conv",
         "cranelift",
         "crtbegin",
+        "crti",
+        "crtn",
         "dimenstion",
         "dylib",
         "elems",
@@ -28,8 +30,19 @@
         "imul",
         "isub",
         "LBRACK",
+        "lbruntime",
+        "lgcc",
+        "libc",
         "libcall",
+        "libm",
         "libruntime",
+        "lkernel",
+        "lmingw",
+        "lmingwex",
+        "lmsvcrt",
+        "lruntime",
+        "lshell",
+        "luser",
         "msys",
         "msystem",
         "objdumping",
