--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ cranelift-object = "0.104"
 cranelift-codegen = "0.104"
 target-lexicon = "0.12.16"
 ordered-float = "5.1.0"
+color-eyre = "0.6.5"
+thiserror = "2.0.17"
 
 [build-dependencies]
 cc = "1.2.41"
