--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,10 @@
         "crtbegin",
         "crti",
         "crtn",
+        "DBUILD",
+        "DCMAKE",
         "dimenstion",
+        "DLLVM",
         "dylib",
         "elems",
         "fadd",
@@ -53,11 +56,13 @@
         "println",
         "RBRACK",
         "repr",
+        "RTTI",
         "rustup",
         "sdiv",
         "srem",
         "strequal",
         "uextend",
+        "winget",
         "Yalon"
     ],
     "python.REPL.enableREPLSmartSend": false
