--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,18 +20,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Install MinGW (Windows only)
+    - name: Install clang
       if: runner.os == 'Windows'
-      uses: msys2/setup-msys2@v2
-      with:
-        msystem: MINGW64
-        update: true
-        install: mingw-w64-x86_64-gcc
-    
-    - name: Add MinGW to PATH (Windows only)
-      if: runner.os == 'Windows'
-      run: echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-    
+      run: "winget install LLVM.LLVM"
+      
     - name: Install GCC (Linux only)
       if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install -y gcc
