--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,11 @@
 *.exe
 .replit
 */.ccls-cache
-#blacklist libruntime
-lib/**/libruntime.a
 #whitelist everything in lib
 !lib/**
+
+#cmake build
+src/c/build
+
+libruntime.a
+libcore.a
