--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "crtbegin",
         "crti",
         "crtn",
+        "ctla",
         "DBUILD",
         "DCMAKE",
         "dimenstion",
