--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - name: Install Git LFS
+        run: |
+          git lfs install
+          git lfs pull
       # Ensure Python is available on both Windows and Linux
       - name: Set up Python
         uses: actions/setup-python@v5
