vibe coding ci is a bad idea

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,23 +7,23 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Required for C/C++
       - name: Install build tools
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake
 
       - name: Configure CMake (generate compile_commands.json)
+        working-directory: src/c
         run: |
-          "cd src/c" cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -B build
+          cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -B build
 
       - name: Build
+        working-directory: src/c
         run: |
           cmake --build build --parallel
 
       - name: Move compile_commands.json where Sonar expects it
         run: |
-          # SonarScanner requires the file to be inside the project root.
           cp src/c/build/compile_commands.json compile_commands.json
 
       - name: SonarCloud Scan
