--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,8 @@
+on: 
+  push:
+    branches: ["master", "main"]
+  pull_request:
+    branches: ["master", "main"]
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
