--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,11 @@
-on: 
+name: Code quality
+
+on:
   push:
     branches: ["master", "main"]
   pull_request:
     branches: ["master", "main"]
+
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
@@ -11,30 +14,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Install build tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake
-
+          sudo apt-get install -y build-essential cmake clang
       - name: Configure CMake (generate compile_commands.json)
-        working-directory: src/c
+        working-directory: .
         run: |
-          cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -B build
-
+          cmake -S src/c -B src/c/build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
       - name: Build
-        working-directory: src/c
+        working-directory: .
         run: |
-          cmake --build build --parallel
-
-      - name: Move compile_commands.json where Sonar expects it
-        run: |
-          cp src/c/build/compile_commands.json compile_commands.json
-
+          cmake --build src/c/build --parallel
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
-            -Dsonar.cfamily.compile-commands=compile_commands.json
+            -Dsonar.cfamily.compile-commands=src/c/build/compile_commands.json
