Refactored ctla implementation, stil some failing tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
         "msstore",
         "msys",
         "msystem",
+        "nada",
         "noconfirm",
         "objdumping",
         "opps",
