--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,12 @@
-name: Rust
+name: cross platform test 
+permissions:
+  contents: read
 
 on:
   push:
-    branches: [ "master", "main" ]
+    branches: ["master", "main"]
   pull_request:
-    branches: [ "master", "main" ]
+    branches: ["master", "main"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,29 +16,26 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
-    
+
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install clang
-      if: runner.os == 'Windows'
-      run: cargo install llvmenv && llvmenv init && llvmenv build-entry 21 && llvmenv global 32 
-      
-    - name: Install clang (Linux only)
-      if: runner.os == 'Linux'
-      run: sudo apt-get update && sudo apt-get install -y clang
-    
-    - name: Set Cargo target for Linux
-      if: runner.os == 'Linux'
-      run: echo "CARGO_BUILD_TARGET=x86_64-unknown-linux-gnu" >> $GITHUB_ENV
-    
-    - name: Verify clang installation
-      run: clang --version
-    
-    - name: Build
-      run: cargo build --verbose
-    
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+      - name: Install Git LFS
+        run: |
+          git lfs install
+          git lfs pull
+      # Ensure Python is available on both Windows and Linux
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Configure
+        run: python setup_build_system.py --ok
+
+      - name: Build
+        run: cargo build --verbose
+
+      - name: Run tests
+        run: cargo test --verbose
