--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "msys",
         "msystem",
         "nada",
+        "nesscary",
         "noconfirm",
         "objdumping",
         "opps",
