some real features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "rustup",
         "sdiv",
         "SETTINGCHANGE",
+        "sitofp",
         "SMTO",
         "srem",
         "strequal",
