framework done STABLE POINT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,9 +61,11 @@
         "objdumping",
         "opps",
         "peekable",
+        "prgm",
         "println",
         "RBRACK",
         "repr",
+        "rstatus",
         "RTTI",
         "rustup",
         "sdiv",
