--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,11 +2,12 @@
     "recommendations": [
         "streetsidesoftware.code-spell-checker",
         "llvm-vs-code-extensions.vscode-clangd",
-        "bungcip.better-toml",
+        "tamasfe.even-better-toml",
         "ms-vscode.cmake-tools",
         "ms-python.python",
         "ms-python.debugpy",
         "ms-python.vscode-python-envs",
-        "rust-lang.rust-analyzer"
+        "rust-lang.rust-analyzer",
+        "RReverser.llvm"
     ]
 }
