Ints, floats, bools STABLE POINT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "fcmp",
         "fconst",
         "fdiv",
+        "fmod",
         "fmul",
         "fptm",
         "frtm",
@@ -35,6 +36,7 @@
         "iconst",
         "idxs",
         "iface",
+        "imod",
         "imul",
         "insts",
         "isub",
