string literals one block

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,10 +81,20 @@
         "uextend",
         "winget",
         "worldfalse",
+        "xzvf",
         "Yalon"
     ],
     "python.REPL.enableREPLSmartSend": false,
-    "cmake.sourceDirectory": "/root/toy_comp/src/c",
+    //"cmake.sourceDirectory": "C:/Users/chase_qlo04cr/sideProjects/toy_comp/toy_comp/src/c",
     "rust-analyzer.cachePriming.enable": true,
-    "rust-analyzer.server.path": "/usr/local/bin/rust-analyzer"
+    "rust-analyzer.check.command": "check",
+    "rust-analyzer.check.allTargets": true,
+    "rust-analyzer.check.features": "all",
+    "rust-analyzer.cargo.buildScripts.enable": true,
+    "rust-analyzer.rustc.source": "discover",
+    "rust-analyzer.diagnostics.disabled": [],
+    "rust-analyzer.diagnostics.enableExperimental": true,
+    "rust-analyzer.cargo.buildScripts.invocationStrategy": "once",
+
+
 }
