--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ build = "build.rs"
 ordered-float = "5.1.0"
 thiserror = "2.0.17"
 inkwell = { version = "0.7.0", features = ["llvm21-1"] }
-
+llvm-sys = {version = "211.0", features = ["prefer-static"]}
 [build-dependencies]
 cmake = "0.1.54"
 bindgen = "0.70"
