Struct funcs somehow work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "cSpell.words": [
         "ABORTIFHUNG",
         "advapi",
+        "alloca",
         "arrlen",
         "arrs",
         "bindgen",
         "bitcast",
+        "brack",
         "brif",
         "bxor",
         "clif",
