STABLE POINT did some refactors on the ast_gen module to handle struct arrays better

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "brack",
         "brif",
         "bxor",
+        "CLICOLOR",
         "clif",
         "codegen",
         "conv",
@@ -85,8 +86,10 @@
         "vecs",
         "winget",
         "worldfalse",
+        "xast",
         "xzvf",
-        "Yalon"
+        "Yalon",
+        "yast"
     ],
     "python.REPL.enableREPLSmartSend": false,
     //"cmake.sourceDirectory": "C:/Users/chase_qlo04cr/sideProjects/toy_comp/toy_comp/src/c",
@@ -100,6 +103,5 @@
     "rust-analyzer.diagnostics.enableExperimental": true,
     "rust-analyzer.cargo.buildScripts.invocationStrategy": "once",
     "cmake.sourceDirectory": "C:/Users/chase_qlo04cr/sideProjects/toy_comp/toy_comp/src/c",
-
 
 }
