refactored parser, MUCH better tir test error messages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,7 @@
         "srem",
         "strequal",
         "tbox",
+        "thiserror",
         "tirgen",
         "TOLOWER",
         "uextend",
