--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,36 @@
 {
     "cSpell.words": [
         "ABORTIFHUNG",
+        "absf",
+        "acosf",
+        "acosh",
+        "acoshf",
         "advapi",
         "alloca",
         "arrlen",
         "arrs",
+        "asinf",
+        "asinh",
+        "asinhf",
+        "atanf",
+        "atanh",
+        "atanhf",
         "bindgen",
         "bitcast",
         "brack",
         "brif",
         "bxor",
+        "cbrt",
+        "cbrtf",
+        "ceilf",
         "CLICOLOR",
         "clif",
         "codegen",
         "conv",
+        "copysign",
+        "copysignf",
+        "cosf",
+        "coshf",
         "cranelift",
         "crtbegin",
         "crti",
@@ -22,29 +39,41 @@
         "DBUILD",
         "DCMAKE",
         "dimenstion",
+        "dimf",
         "DLLVM",
         "dylib",
         "elems",
+        "expf",
+        "expm",
+        "fabs",
         "fadd",
         "fcmp",
         "fconst",
         "fdiv",
+        "floorf",
         "fmod",
+        "fmodf",
         "fmul",
         "fptm",
         "frtm",
         "fsub",
         "funcs",
+        "hypot",
+        "hypotf",
         "iadd",
         "iconst",
         "idxs",
         "iface",
+        "ilogb",
+        "ilogbf",
         "imod",
         "imul",
         "insts",
         "isub",
         "LBRACK",
         "lbruntime",
+        "ldexp",
+        "ldexpf",
         "lgcc",
         "libc",
         "libcall",
@@ -54,35 +83,61 @@
         "lmingw",
         "lmingwex",
         "lmsvcrt",
+        "logb",
+        "logbf",
+        "logf",
+        "logrithmaic",
         "lruntime",
         "lshell",
         "luser",
+        "maxf",
+        "minf",
         "msstore",
         "msys",
         "msystem",
         "nada",
+        "nearbyint",
+        "nearbyintf",
         "nesscary",
+        "nextafter",
+        "nextafterf",
+        "nexttoward",
+        "nexttowardf",
         "noconfirm",
         "objdumping",
         "opps",
         "peekable",
+        "powf",
         "prgm",
         "println",
         "RBRACK",
+        "remainderf",
         "repr",
+        "roundf",
         "rstatus",
         "RTTI",
         "rustup",
+        "scalbln",
+        "scalblnf",
+        "scalbn",
+        "scalbnf",
         "sdiv",
         "SETTINGCHANGE",
+        "sinf",
+        "sinhf",
         "sitofp",
         "SMTO",
+        "sqrtf",
         "srem",
         "strequal",
+        "tanf",
+        "tanhf",
         "tbox",
         "thiserror",
         "tirgen",
         "TOLOWER",
+        "trunc",
+        "truncf",
         "uextend",
         "vecs",
         "winget",
