I spent about 18 hours on ARGV!!!! This feature was harder than CTLA

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,151 +1,152 @@
 {
     "cSpell.words": [
-        "ABORTIFHUNG",
-        "absf",
-        "acosf",
-        "acosh",
-        "acoshf",
-        "advapi",
-        "alloca",
-        "arrlen",
-        "arrs",
-        "asinf",
-        "asinh",
-        "asinhf",
-        "atanf",
-        "atanh",
-        "atanhf",
-        "bindgen",
-        "bitcast",
-        "brack",
-        "brif",
-        "bxor",
-        "cbrt",
-        "cbrtf",
-        "ceilf",
-        "CLICOLOR",
-        "clif",
-        "codegen",
-        "conv",
-        "copysign",
-        "copysignf",
-        "cosf",
-        "coshf",
-        "cranelift",
-        "crtbegin",
-        "crti",
-        "crtn",
-        "ctla",
-        "DBUILD",
-        "DCMAKE",
-        "dimenstion",
-        "dimf",
-        "DLLVM",
-        "dylib",
-        "elems",
-        "expf",
-        "expm",
-        "fabs",
-        "fadd",
-        "fcmp",
-        "fconst",
-        "fdiv",
-        "floorf",
-        "fmod",
-        "fmodf",
-        "fmul",
-        "fptm",
-        "frtm",
-        "fsub",
-        "funcs",
-        "hypot",
-        "hypotf",
-        "iadd",
-        "iconst",
-        "idxs",
-        "iface",
-        "ilogb",
-        "ilogbf",
-        "imod",
-        "imul",
-        "insts",
-        "isub",
-        "LBRACK",
-        "lbruntime",
-        "ldexp",
-        "ldexpf",
-        "lgcc",
-        "libc",
-        "libcall",
-        "libm",
-        "libruntime",
-        "lkernel",
-        "lmingw",
-        "lmingwex",
-        "lmsvcrt",
-        "logb",
-        "logbf",
-        "logf",
-        "logrithmaic",
-        "lruntime",
-        "lshell",
-        "luser",
-        "maxf",
-        "minf",
-        "msstore",
-        "msys",
-        "msystem",
-        "nada",
-        "nearbyint",
-        "nearbyintf",
-        "nesscary",
-        "nextafter",
-        "nextafterf",
-        "nexttoward",
-        "nexttowardf",
-        "noconfirm",
-        "objdumping",
-        "opps",
-        "peekable",
-        "powf",
-        "prgm",
-        "println",
-        "RBRACK",
-        "remainderf",
-        "repr",
-        "roundf",
-        "rstatus",
-        "RTTI",
-        "rustup",
-        "scalbln",
-        "scalblnf",
-        "scalbn",
-        "scalbnf",
-        "sdiv",
-        "SETTINGCHANGE",
-        "sinf",
-        "sinhf",
-        "sitofp",
-        "SMTO",
-        "sqrtf",
-        "srem",
-        "strequal",
-        "tanf",
-        "tanhf",
-        "tbox",
-        "thiserror",
-        "tirgen",
-        "TOLOWER",
-        "trunc",
-        "truncf",
-        "uextend",
-        "vecs",
-        "winget",
-        "worldfalse",
-        "xast",
-        "xzvf",
-        "Yalon",
-        "yast"
+      "ABORTIFHUNG",
+      "absf",
+      "acosf",
+      "acosh",
+      "acoshf",
+      "advapi",
+      "alloca",
+      "arrlen",
+      "arrs",
+      "asan",
+      "asinf",
+      "asinh",
+      "asinhf",
+      "atanf",
+      "atanh",
+      "atanhf",
+      "bindgen",
+      "bitcast",
+      "brack",
+      "brif",
+      "bxor",
+      "cbrt",
+      "cbrtf",
+      "ceilf",
+      "CLICOLOR",
+      "clif",
+      "codegen",
+      "conv",
+      "copysign",
+      "copysignf",
+      "cosf",
+      "coshf",
+      "cranelift",
+      "crtbegin",
+      "crti",
+      "crtn",
+      "ctla",
+      "DBUILD",
+      "DCMAKE",
+      "dimenstion",
+      "dimf",
+      "DLLVM",
+      "dylib",
+      "elems",
+      "expf",
+      "expm",
+      "fabs",
+      "fadd",
+      "fcmp",
+      "fconst",
+      "fdiv",
+      "floorf",
+      "fmod",
+      "fmodf",
+      "fmul",
+      "fptm",
+      "frtm",
+      "fsub",
+      "funcs",
+      "hypot",
+      "hypotf",
+      "iadd",
+      "iconst",
+      "idxs",
+      "iface",
+      "ilogb",
+      "ilogbf",
+      "imod",
+      "imul",
+      "insts",
+      "isub",
+      "LBRACK",
+      "lbruntime",
+      "ldexp",
+      "ldexpf",
+      "lgcc",
+      "libc",
+      "libcall",
+      "libm",
+      "libruntime",
+      "lkernel",
+      "lmingw",
+      "lmingwex",
+      "lmsvcrt",
+      "logb",
+      "logbf",
+      "logf",
+      "logrithmaic",
+      "lruntime",
+      "lshell",
+      "luser",
+      "maxf",
+      "minf",
+      "msstore",
+      "msys",
+      "msystem",
+      "nada",
+      "nearbyint",
+      "nearbyintf",
+      "nesscary",
+      "nextafter",
+      "nextafterf",
+      "nexttoward",
+      "nexttowardf",
+      "noconfirm",
+      "objdumping",
+      "opps",
+      "peekable",
+      "powf",
+      "prgm",
+      "println",
+      "RBRACK",
+      "remainderf",
+      "repr",
+      "roundf",
+      "rstatus",
+      "RTTI",
+      "rustup",
+      "scalbln",
+      "scalblnf",
+      "scalbn",
+      "scalbnf",
+      "sdiv",
+      "SETTINGCHANGE",
+      "sinf",
+      "sinhf",
+      "sitofp",
+      "SMTO",
+      "sqrtf",
+      "srem",
+      "strequal",
+      "tanf",
+      "tanhf",
+      "tbox",
+      "thiserror",
+      "tirgen",
+      "TOLOWER",
+      "trunc",
+      "truncf",
+      "uextend",
+      "vecs",
+      "winget",
+      "worldfalse",
+      "xast",
+      "xzvf",
+      "Yalon",
+      "yast"
     ],
     "python.REPL.enableREPLSmartSend": false,
     //"cmake.sourceDirectory": "C:/Users/chase_qlo04cr/sideProjects/toy_comp/toy_comp/src/c",
@@ -159,5 +160,11 @@
     "rust-analyzer.diagnostics.enableExperimental": true,
     "rust-analyzer.cargo.buildScripts.invocationStrategy": "once",
     "cmake.sourceDirectory": "C:/Users/chase_qlo04cr/sideProjects/toy_comp/toy_comp/src/c",
+      "C_Cpp.default.includePath": [
+      "${workspaceFolder}/src/c",
+    ],
+  "clangd.arguments": [
+      "--compile-commands-dir=${workspaceFolder}/build"
+  ]
 
 }
